--- a/mastodon/ubos-manifest.json
+++ b/mastodon/ubos-manifest.json
@@ -108,45 +108,47 @@
                         "${appconfig.datadir}/mastodon/.bundle",
                         "${appconfig.datadir}/mastodon/app",
                         "${appconfig.datadir}/mastodon/bin",
-                        "${appconfig.datadir}/mastodon/build",
+                        "${appconfig.datadir}/mastodon/chart",
                         "${appconfig.datadir}/mastodon/config",
-                        "${appconfig.datadir}/mastodon/config.ru",
                         "${appconfig.datadir}/mastodon/db",
-                        "${appconfig.datadir}/mastodon/Gemfile",
-                        "${appconfig.datadir}/mastodon/Gemfile.lock",
                         "${appconfig.datadir}/mastodon/lib",
                         "${appconfig.datadir}/mastodon/log",
                         "${appconfig.datadir}/mastodon/node_modules",
-                        "${appconfig.datadir}/mastodon/package.json",
                         "${appconfig.datadir}/mastodon/public",
                         "${appconfig.datadir}/mastodon/Rakefile",
                         "${appconfig.datadir}/mastodon/spec",
                         "${appconfig.datadir}/mastodon/streaming",
                         "${appconfig.datadir}/mastodon/vendor",
+
+                        "${appconfig.datadir}/mastodon/config.ru",
+                        "${appconfig.datadir}/mastodon/Gemfile",
+                        "${appconfig.datadir}/mastodon/Gemfile.lock",
+                        "${appconfig.datadir}/mastodon/package.json",
                         "${appconfig.datadir}/mastodon/yarn.lock"
                     ],
                     "source" : "mastodon/$2"
                 },
                 {
-                    "type"             : "directorytree",
-                    "filepermissions"  : "preserve",
-                    "dirpermissions"   : "preserve",
-                    "names"            : [
-                        "500.html",
+                    "type"           : "directorytree",
+                    "filepermissions" : "preserve",
+                    "dirpermissions" : "preserve",
+                    "names"          : [
                         "assets",
                         "avatars",
+                        "emoji",
+                        "headers",
+                        "ocr",
+                        "packs",
+                        "sounds",
+
+                        "500.html",
                         "badge.png",
                         "embed.js",
-                        "emoji",
                         "favicon.ico",
-                        "headers",
                         "inert.css",
-                        "ocr",
                         "oops.gif",
                         "oops.png",
-                        "packs",
                         "robots.txt",
-                        "sounds",
                         "sw.js",
                         "sw.js.map",
                         "web-push-icon_expand.png",
